minor changes and updates

--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,11 @@
 				<td>2012</td>
 				<td><a href="https://github.com/crispiestsquid/Earth-Invaders">GitHub</a>, <a href="earthinvaders.html">Live</a></td>
 			  </tr>
+				  <td>Target Shoot</td>
+				<td>HTML5 Game Development</td>
+				<td>2015</td>
+				<td><a href="/projects/TargetShoot/targetshoot.html">Live</a></td>
+			  </tr>
 		  </tbody>
 	  </table>
   </div>
