--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Kevin Little</title>
 <link href="css/main.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/chat.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/annie-use-your-telescope:n4:default;chewy:n4:default;exo:n1,n9,n3,n2,n4,n6,n5:default.js" type="text/javascript"></script>
 </head>
 
@@ -31,7 +32,7 @@
       <ul id="ham-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="blog.php">Blog</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a class="current" href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -54,25 +55,24 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="blog.php">Blog</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a class="current" href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div id="widgets">
       <ul>
-        <li><a href="https://linkedin.com/in/crispiestsquid"><img src="images/2-Color/In-2C-121px-R.png" width="20" height="18" alt=""/></a>
-        <li><a href="https://github.com/crispiestsquid"><img src="images/PNG/GitHub-Mark-120px-plus.png" width="20" height="20" alt=""/></a>
-        <li><a href="https://twitter.com/CrispiestSquid"><img src="images/Twitter_Logo_White_On_Blue/Twitter_Logo_White_On_Blue.png" width="20" height="20" alt=""/></a>
+		  <li><a href="https://linkedin.com/in/crispiestsquid"><img src="images/2-Color/In-2C-121px-R.png" width="20" height="18" alt=""/></a></li>
+		  <li><a href="https://github.com/crispiestsquid"><img src="images/PNG/GitHub-Mark-120px-plus.png" width="20" height="20" alt=""/></a></li>
+		  <li><a href="https://twitter.com/CrispiestSquid"><img src="images/Twitter_Logo_White_On_Blue/Twitter_Logo_White_On_Blue.png" width="20" height="20" alt=""/></a></li>
       </ul>
     </div>
   </div>
   <div id="main">
     <h1>contact me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus accumsan tincidunt leo, quis facilisis lorem condimentum et. Proin non augue molestie, aliquam orci nec, sagittis quam. Vivamus aliquam magna vel lorem tincidunt, sed finibus tortor porttitor. Morbi turpis metus, volutpat id porttitor sit amet, finibus vitae libero. In lectus arcu, convallis sed euismod nec, vulputate sed enim. Pellentesque sollicitudin tellus ac facilisis feugiat. Integer iaculis tellus dolor, nec finibus lectus volutpat at. Sed quam risus, suscipit vitae ligula sit amet, vulputate tincidunt nulla. Ut tempor condimentum sapien, non euismod quam pharetra non. Cras tincidunt pellentesque sodales. Aenean id mollis urna. Praesent sodales ipsum quis sem laoreet, ut pellentesque elit condimentum. 
-      Quisque imperdiet augue ligula, in ornare ligula facilisis vitae. Praesent non varius nisi. Duis quis semper sem, a tristique massa. Proin eu viverra metus. Curabitur et elit in libero luctus hendrerit sed at dui. Nam consequat purus et tellus lacinia, eget faucibus nisi finibus. Ut vel augue tristique, porttitor ipsum eu, volutpat massa. Suspendisse non lacus at velit blandit molestie ut ut enim. Sed hendrerit dapibus ex, dapibus cursus erat venenatis non. Ut sagittis tempus augue nec vestibulum. Maecenas urna elit, ultrices et quam sit amet, luctus luctus magna. Cras risus est, finibus quis nisi in, maximus commodo felis. Quisque vel lacinia neque. 
-      Suspendisse sagittis erat a convallis dignissim. Suspendisse potenti. Cras vel quam scelerisque, tincidunt purus quis, porttitor dui. Ut gravida mi scelerisque dolor ullamcorper, in pretium tortor porttitor. Aliquam eu sapien mollis, ornare ipsum ut, consectetur velit. Proin blandit ligula in urna posuere, id mollis diam posuere. Aenean porttitor nibh sed arcu ornare vestibulum. Ut volutpat efficitur mattis. 
-      Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ultrices vehicula eros eu cursus. Donec vulputate sem at finibus porta. Curabitur quis eleifend dolor. Donec rhoncus interdum facilisis. Cras dignissim finibus tortor sed euismod. Nullam ac risus et tortor dignissim molestie et sit amet est. Curabitur consectetur, arcu in hendrerit lobortis, nisl lorem luctus leo, ut ullamcorper tortor nulla at ligula. Proin fermentum non justo ut vestibulum. Fusce ultrices tempus finibus. Curabitur lacinia est consequat felis malesuada, vel ornare tellus pulvinar. Vestibulum ut ante eu metus malesuada placerat. 
-      Phasellus eleifend dolor a augue sollicitudin, eget elementum elit hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce ultrices dui sit amet est dignissim fermentum. Pellentesque ultricies tellus nec nibh condimentum feugiat. Sed tempor tortor vulputate, pellentesque lorem sit amet, pulvinar massa. Integer ut aliquam turpis. In accumsan, odio a egestas pretium, sem lectus interdum ligula, et luctus eros orci non ipsum. Vestibulum ut nulla et erat tincidunt eleifend. Integer faucibus, diam a pretium accumsan, dui libero porta tortor, sed volutpat sem ex et dui. Praesent a mollis neque, eget vehicula nunc. Nam semper tincidunt elit ac tempus. Quisque sagittis finibus faucibus. Pellentesque hendrerit turpis vel neque condimentum vulputate. </p>
+	  <div id="chatOutput"></div>
+	  <input id="userName" type="text" placeholder="Username" maxlength="32">
+	  <input id="chatInput" type="text" placeholder="Message" maxlength="128">
+	  <button id="chatSend">Send</button>
   </div>
   <div id="footer">
     <hr>
