--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		  <ul id="ham-nav">
         	<li><a class="current" href="index.html">Home</a></li>
         	<li><a href="blog.php">Blog</a></li>
-        	<li><a href="about.html">About</a></li>
+        	<li><a href="projects.html">Projects</a></li>
         	<li><a href="contact.html">Contact</a></li>
 		  </ul>  
 	  </nav>
@@ -64,7 +64,7 @@
       <ul>
         <li><a class="current" href="index.html">Home</a></li>
         <li><a href="blog.php">Blog</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
